Non-form ajax request now also show error bubble on failure. The bubble no longer gets overshadowed by overlays (z-index:10). Cleaned simple_loadm which now calls load_content.

--- a/ella/newman/media/css/base.css
+++ b/ella/newman/media/css/base.css
@@ -309,6 +309,7 @@ td, th {
     top: -10px;
     width: 100%;
     text-align: center;
+    z-index: 10;
 }
 #opmsg span {
     padding: 5px 5px 5px 22px;
